--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -34,28 +34,26 @@
 {{rel-bottom}}
 
 ====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|device used to make a whistling sound}}
 * Afrikaans: {{t-|af|fluit}}
 * Albanian: {{t-|sq|fishkëllimë|f}}
 * Armenian: {{t-|hy|սուլիչ|tr=sulič}}
 * Aromanian: {{t-|rup|fluiarã|f}}
 * Azeri: {{t-|az|fit}}
-* Breton: {{t+|br|c'hwitell|f|xs=Breton}}, {{t+|br|c'hwitelloù|p|xs=Breton}}
+* Breton: {{t+|br|c'hwitell|f}}, {{t+|br|c'hwitelloù|p}}
 * Bulgarian: {{t+|bg|свирка|f|tr=svirka|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|哨子|tr=shàozi|sc=Hani}}, {{t|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t-|cmn|口笛|tr=kǒudí|sc=Hani}}
-* Serbo-Croatian: {{t|sh|zviždaljka|f}}
 * Czech: {{t+|cs|píšťala|f}}, {{t-|cs|píšťalka|f}}
 * Danish: {{t-|da|fløjte|c}}
 * Dutch: {{t+|nl|fluitje|n}}
 * Finnish: {{t+|fi|pilli}}
 * French: {{t+|fr|sifflet}}
-* German: {{t+|de|Pfeife|f}},  {{t+|de|Trillerpfeife|f}}
+* German: {{t+|de|Pfeife|f}}, {{t+|de|Trillerpfeife|f}}
 * Greek: {{t+|el|σφυρίχτρα|f|tr=sfyríchtra|sc=Grek}}
 * Haitian Creole: {{tø|ht|siflèt}}
 * Hungarian: {{t+|hu|síp}}
-* Irish: {{t+|ga|feadóg|f|xs=Irish}}
+* Irish: {{t+|ga|feadóg|f}}
 {{trans-mid}}
 * Italian: {{t-|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue}}, {{t-|ja|ホイッスル|tr=hoissuru}}, {{t-|ja|口笛|tr=くちぶえ, kuchibue}}
@@ -69,8 +67,8 @@
 * Russian: {{t+|ru|свисток|m|tr=svistók}}
 * Scottish Gaelic: {{t-|gd|feadag|f}}, {{t-|gd|feadan|m}}
 * Serbo-Croatian: {{t|sh|pištaljka|f}}, {{t|sh|zviždaljka|f}}, [[zviždalica]] {{f}}, [[pištalica]] {{f}}
-* Spanish: {{t+|es|chifle|m}},  {{t+|es|pito|m}},  {{t+|es|silbato|m}}
-* Swahili: {{t+|sw|kipenga|xs=Swahili}},  {{t+|sw|firimbi|xs=Swahili}},  {{t+|sw|filimbi|xs=Swahili}}
+* Spanish: {{t+|es|chifle|m}}, {{t+|es|pito|m}}, {{t+|es|silbato|m}}
+* Swahili: {{t+|sw|kipenga}}, {{t+|sw|firimbi}}, {{t+|sw|filimbi}}
 * Swedish: {{t+|sv|vissla|c}}, {{t+|sv|pipa|c}}, {{t+|sv|visselpipa|c}}
 * Tagalog: {{t-|tl|sipol}}, {{t+|tl|pito}}
 * Turkish: {{t+|tr|ıslık}}
@@ -95,12 +93,12 @@
 {{trans-bottom}}
 {{trans-top|sound made by whistling}}
 * Armenian: {{t-|hy|սուլոց|tr=suloc’}}
-* Breton: {{t-|br|c'hwitelladenn|f|xs=Breton}}, {{t-|br|c'hwitelladennoù|p|xs=Breton}}
+* Breton: {{t-|br|c'hwitelladenn|f}}, {{t-|br|c'hwitelladennoù|p}}
 * Danish: {{t-|da|fløjt|n}}
 * Dutch: {{t-|nl|fluittoon|m}}
 * Finnish: {{t+|fi|vihellys}}, {{t-|fi|vislaus}}
 * French: {{t+|fr|sifflement|m}}, {{t+|fr|sifflements|m|p}}
-* German: {{t+|de|Pfeifen|n}},  {{t+|de|Pfiff|m}}
+* German: {{t+|de|Pfeifen|n}}, {{t+|de|Pfiff|m}}
 * Greek: {{t+|el|σφύριγμα|n|tr=sfýrigma|sc=Grek}}, {{t-|el|σφυριξιά|f|tr=sfyrixiá|sc=Grek}}
 * Hungarian: {{t-|hu|füttyszó}}
 * Italian: {{t+|it|fischio|m}}
@@ -110,29 +108,29 @@
 * Portuguese: {{t-|pt|apito|m}}, {{t+|pt|assobio|m}}, {{t+|pt|assovio|m}}
 * Romanian: {{t-|ro|fluierat|n}}
 * Russian: {{t+|ru|свист|m|tr=svist}}
-* Scottish Gaelic: {{t-|gd|fead|f|xs=Scottish Gaelic}}
+* Scottish Gaelic: {{t-|gd|fead|f}}
 * Serbo-Croatian: {{t|sh|zvižduk|m}}
-* Spanish: {{t+|es|silbato|m}},  {{t+|es|pitido|m}},  {{t+|es|chiflido|m}},  {{t-|es|pitada|f}}
-* Swahili: {{t+|sw|kipenga|xs=Swahili}}
+* Spanish: {{t+|es|silbato|m}}, {{t+|es|pitido|m}}, {{t+|es|chiflido|m}}, {{t-|es|pitada|f}}
+* Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t-|sv|vissling|c}}
 {{trans-bottom}}
 
 {{trans-top|sound similar to the sound made by whistling}}
-* Breton: {{t-|br|c'hwitelladenn|f|xs=Breton}}, {{t-|br|c'hwitelladennoù|p|xs=Breton}}
+* Breton: {{t-|br|c'hwitelladenn|f}}, {{t-|br|c'hwitelladennoù|p}}
 * Danish: {{t-|da|fløjt|n}}
 * Dutch: [[fluittoon]] {{m}}
 * Finnish: {{t+|fi|vihellys}}
-* German: {{t+|de|Pfeifen|n}},  {{t+|de|Pfiff|m}}
+* German: {{t+|de|Pfeifen|n}}, {{t+|de|Pfiff|m}}
 * Greek: {{t+|el|σφύριγμα|n|tr=(sfýrigma|sc=Grek}}
 * Hungarian: [[sípszó]]
 * Polish: [[gwizd]] {{m}}
 {{trans-mid}}
 * Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
 * Russian: {{t+|ru|свист|m|tr=svist}}
-* Scottish Gaelic: {{t-|gd|fead|f|xs=Scottish Gaelic}}
+* Scottish Gaelic: {{t-|gd|fead|f}}
 * Serbo-Croatian: [[zvižduk]] {{m}}
-* Spanish: {{t+|es|silbato|m}},  {{t+|es|pito|m}},  {{t+|es|pitido}}
-* Swahili: {{t+|sw|kipenga|xs=Swahili}}
+* Spanish: {{t+|es|silbato|m}}, {{t+|es|pito|m}}, {{t+|es|pitido}}
+* Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t-|sv|vissling|c}}
 {{trans-bottom}}
 
