--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -169,11 +169,11 @@
 {{trans-top|to produce a whistling sound}}
 * Armenian: {{t-|hy|սուլել|tr=sulel}}
 * Aromanian: {{t|rup|shuir}}
-* Breton: {{t+|br|c'hwitellat|xs=Breton}}
+* Breton: {{t+|br|c'hwitellat}}
 * Catalan: {{t|ca|xiular}}
 * Chinese:
 *: Mandarin: {{t|cmn|吹口哨|tr=chuī kǒushào|sc=Hani}}, {{t|cmn|鳴笛|sc=Hani}}, {{t|cmn|鸣笛|tr=míngdí|sc=Hani}}
-* Crimean Tatar: {{tø|crh|sızğırmaq|xs=Crimean Tatar}}
+* Crimean Tatar: {{tø|crh|sızğırmaq}}
 * Czech: {{t-|cs|pískat}}
 * Dalmatian: {{t|dlm|sublar}}
 * Danish: {{t-|da|fløjte}}, {{t-|da|hvisle}}
@@ -194,18 +194,18 @@
 * Occitan: {{t|oc|siblar}}, {{t|oc|fiular}}
 * Polish: [[gwizdać]], [[świstać]]
 * Portuguese: {{t+|pt|assobiar}}, {{t+|pt|assoviar}}
-* Romanian: {{t+|ro|fluiera}},  {{t+|ro|șuiera}}
+* Romanian: {{t+|ro|fluiera}}, {{t+|ro|șuiera}}
 * Romansch: {{t|rm|tschivlar}}, {{t|rm|schular}}, {{t|rm|tgular}}, {{t|rm|schivlar}}, {{t|rm|tschüvler}}, {{t|rm|tschüblar}}
 * Russian: {{t+|ru|свистеть|tr=svistét’}} {{impf}}, {{t+|ru|свистнуть|tr=svístnut’}} {{pf.}}
-* Scottish Gaelic: {{t-|gd|dèan fead|xs=Scottish Gaelic}},  {{t-|gd|fead|xs=Scottish Gaelic}}
+* Scottish Gaelic: {{t-|gd|dèan fead}}, {{t-|gd|fead}}
 * Serbo-Croatian: {{t|sh|zvižduk|m}}
-* Spanish: {{t+|es|silbar}},  {{t+|es|chiflar}},  {{t+|es|pitar}}
-* Swahili: {{t+|sw|kipenga|xs=Swahili}}
+* Spanish: {{t+|es|silbar}}, {{t+|es|chiflar}}, {{t+|es|pitar}}
+* Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t+|sv|vissla}}
 {{trans-bottom}}
 
 {{trans-top|to move is such a way as to make a whistling sound}}
-* Breton: {{t+|br|c'hwitellat|xs=Breton}}
+* Breton: {{t+|br|c'hwitellat}}
 * Danish: {{t-|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
 * Finnish: {{t-|fi|viheltää}}
@@ -214,7 +214,7 @@
 * Hungarian: {{t+|hu|fütyül}}, {{t+|hu|sivít}}
 * Russian: {{t+|ru|свистеть|tr=svistét’}} {{impf}}, {{t+|ru|просвистеть|tr=prosvistét’}} {{pf.}}
 * Serbo-Croatian: {{t|sh|zviždanje}}, {{t|sh|zviždati}}
-* Swahili: {{t+|sw|kipenga|xs=Swahili}}
+* Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t+|sv|vissla}}
 {{trans-bottom}}
 
