--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -2,7 +2,7 @@
 
 ===Noun===
 {{en-noun|sg=[[ulterior]] [[motive]]}}
-
+dave is a plonker
 # An [[alternative]] or [[extrinsic]] [[reason]] for doing something, especially when concealed or when differing from the [[stated]] or [[apparent]] reason.
 #* '''1895''', [[w:Arthur_Conan_Doyle|Sir Arthur Conan Doyle]], ''The Stark Munro Letters'', ch. 9,
 #*: There lurks no bribe in the smell and beauty of the flower. Its charm has no '''ulterior motive'''.
