Reverted edits by [[Special:Contributions/74.116.154.11|74.116.154.11]], restoring last version by [[User:Bequw|Bequw]]. If you think this rollback is in error, please leave a message on my talkpage. <malapportionment#18469856>

--- a/en/m/malapportionment.803562.wikitext
+++ b/en/m/malapportionment.803562.wikitext
@@ -4,6 +4,6 @@
 
 ===Noun===
 {{en-noun|-}}
-#{{politics}} Any [[system]] wher one group has significantly more [[influence]] than another, such as when voting [[district]]s are unevenly spread out across a [[population]] (compare [[gerrymandering]]).
+#{{politics}} Any [[system]] where one group has significantly more [[influence]] than another, such as when voting [[district]]s are unevenly spread out across a [[population]] (compare [[gerrymandering]]).
 
 [[vi:malapportionment]]
