--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -25,12 +25,13 @@
 * Danish: {{t-|da|bagtanke|c}}
 * Dutch: {{t-|nl|verborgen beweegredenen}}
 * Finnish: {{t+|fi|taka-ajatus}}
-* French: [[motif]] [[secret]] {{m}}, [[arrière-pensée]] {{f}}
+* French: [[motif]] [[secret]] {{m}}, [[arrière-pensée]] {{f}}, {{t|fr|arrière-pensée|f}}
 {{trans-mid}}
 * German: {{t+|de|Hintergedanke|m}}
 * Korean: {{t-|ko|배후목적|tr=Bae-hoo-mok-jeok|sc=Kore}}
 * Portuguese: {{t-|pt|segunda intenção|f}}
-* Serbo-Croatian: {{t|sh|скривени мотив|m|tr=skriveni motiv|sc=Cyrl}}
+* Russian: {{t|ru|скрытый мотив|m|tr=skrýtyj motív|sc=Cyrl}}, {{t|ru|задняя мысль|f|tr=zádnjaja myslʹ|sc=Cyrl}}
+* Serbo-Croatian: {{t|sh|скривени мотив|m|tr=skriveni motiv|sc=Cyrl}}, {{t|sh|skriveni motiv|m}}
 * Spanish: {{t-|es|segunda intención|f}}
 * Swedish: {{t|sv|baktanke|c}}
 {{trans-bottom}}
