/* Translations */ <ulterior motive#18475615>

--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -29,7 +29,7 @@
 * German: {{t+|de|Hintergedanke|m}}
 * Japanese: {{t|ja|下心|tr=したごころ, shitagokoro|sc=Jpan}}, {{t|ja|他心|tr=たしん, tashin|sc=Jpan}}, {{t|ja|他意|tr=たい, tai|sc=Jpan}}
 {{trans-mid}}
-* Korean: {{t-|ko|배후목적|tr=Bae-hoo-mok-jeok|sc=Kore}}
+* Korean: {{t-|ko|배후목적|tr=baehu mokjeog|sc=Kore}}
 * Portuguese: {{t-|pt|segunda intenção|f}}
 * Russian: {{t|ru|задняя мысль|f|tr=zádnjaja myslʹ|sc=Cyrl}}, {{t|ru|скрытый мотив|m|tr=skrýtyj motív|sc=Cyrl}}
 * Serbo-Croatian:
