--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -48,6 +48,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Russian: {{t+|ru|вор|sc=Cyrl}}
 * Serbo-Croatian: {{t|sh|lopov|m}}
 * Slovene: {{t-|sl|lopov|m}}
+* Spanish: {{t+|es|ladrón|m}}, {{t-|es|ladrona|f}}, {{t+|es|ratero|m}}, {{t-|es|ratera|f}}, {{t+|es|truhán|m}}, {{t-|es|truhana|f}}
 {{trans-bottom}}
 
 {{trans-top|a staff with a hook at one end, particularly one used by shepherds}}
@@ -60,6 +61,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Greek: {{t+|el|γκλίτσα|f|tr=gklítsa}}
 * Icelandic: {{t-|is|hirðingjastafur|m}}
 * Irish: {{t-|ga|crúca|m}}
+* Spanish: {{t+|es|cayado|m}}
 {{trans-bottom}}
 
 {{trans-top|a bend}}
@@ -67,6 +69,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Finnish: {{t-|fi|taive}}
 {{trans-mid}}
 * Russian: {{t+|ru|изгиб|sc=Cyrl}}
+* Spanish: {{t-|es|doblez|m}}, {{t+|es|curva|f}}, {{t-|es|curvidad|f}}, {{t-|es|torcedura|f}}
 {{trans-bottom}}
 
 ====Verb====
@@ -87,6 +90,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 {{trans-mid}}
 * German: [[krümmen]]
 * Russian: {{t+|ru|сгибать}}
+* Spanish: {{t-|es|curvar}}, {{t+|es|doblar}}, {{t+|es|torcer}}, {{t+|es|enchuecar}}
 {{trans-bottom}}
 
 ===Etymology 2===
