--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -37,6 +37,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * American Sign Language: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
 * Arabic: {{t-|ar|نزف|tr=nazafa}}
 * Armenian: {{t-|hy|արյունահոսել|tr=aryunahosel}}
+* Aromanian: {{t|rup|sãndzinedzu}}
 * Asturian: {{t|ast|sangrar}}
 * {{trreq|eu}}
 * Bengali: {{t-|bn|রক্ত ঝরা|sc=Beng}}, {{t-|bn|রক্ত পড়া|sc=Beng}}
@@ -51,6 +52,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Faroese: {{t-|fo|bløða}}
 * Finnish: [[vuotaa]] [[veri|verta]]
 * French: {{t+|fr|saigner}}
+* Friulian: {{t|fur|sanganâ}}
 * Galician: {{t|gl|sangrar}}
 * Georgian: {{t-|ka|სისხლის დენა|tr=sisxlis dena|sc=Geor|xs=Georgian}}
 * German: {{t+|de|bluten}}
@@ -77,6 +79,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Portuguese: {{t+|pt|sangrar}}
 * Romanian: {{t+|ro|sângera}}
 * Russian: {{t+|ru|кровоточить|tr=krovotočít’}} (seldom used, [[иметь кровотечение]] ''imét' krovotečénije'', [[идёт кровь]] ''idjót krov''')
+* Sardinian: {{t|sc|sambenàre}}, {{t|sc|sambenàri}}, {{t|sc|sanguinai}}
 * Scottish Gaelic: {{t-|gd|leig fuil|xs=Scottish Gaelic}},  {{qualifier|nose}} {{t-|gd|leum|xs=Scottish Gaelic}}
 * Slovak: {{t-|sk|krvácať}}
 * Slovene: {{t+|sl|krvaveti}}
