===Etymology===  From {{etyl|grc}} {{rfscript|grc}} leaf + dry.  # The diseased condition of a vine caused by this aphid. <phylloxera#18507854>

--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -1,9 +1,13 @@
 ==English==
 
+===Etymology===
+From {{etyl|grc}} {{rfscript|grc}} leaf + dry.
+
 ===Noun===
 {{en-noun|phylloxerae}}
 
 # An [[aphid]], of the genus ''[[Phylloxera]]'', that is very destructive to [[grape]] [[vine]]s
+# The diseased condition of a vine caused by this aphid.
 
 ====Translations====
 {{trans-top|aphid}}
