--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -11,7 +11,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/}}, {{X-SAMPA|/@d"v3:tIsm@nt/}} (occasionally {{IPA|/ad.və.ˈtʌɪz.mənt/}}/ in some regions)
 * {{audio|Advertisement.ogg|Audio (UK)}}
-* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/}}, {{X-SAMPA|/{"dv@`%taIzm@nt/}}
+* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/}}, {{X-SAMPA|/"{dv@`%taIzm@nt/}}
 * {{audio|en-us-advertisement.ogg|Audio (US)}}
 * {{hyphenation|ad|ver|tise|ment}}
 
@@ -48,18 +48,16 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * [[adware]]
 
 ====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|commercial solicitation}}
 * Arabic: {{t|ar|إيذان|m|tr='idhaan}}, {{t|ar|إعلان|m|tr='i3laan}}
 * Armenian: {{t-|hy|գովազդ|tr=govazd}}
 * Breton: {{t|br|bruderezh|m}}
 * Bulgarian: {{t+|bg|реклама|f}}
 * Chinese:
-*: Mandarin: {{t-|cmn|廣告|sc=Hani}},  {{t-|cmn|广告|tr=guǎnggào|sc=Hani}}
-* Serbo-Croatian: {{t|sh|reklama}}
+*: Mandarin: {{t-|cmn|廣告|sc=Hani}}, {{t-|cmn|广告|tr=guǎnggào|sc=Hani}}
 * Czech: {{t-|cs|reklama|f}}
 * Danish: {{t-|da|reklame}}
-* Dutch: {{t|nl|reclame|f|m}}, {{t|nl|advertentie  |f}}
+* Dutch: {{t|nl|reclame|f|m}}, {{t|nl|advertentie|f}}
 * Esperanto: {{t-|eo|reklamo}}
 * Estonian: {{t-|et|reklaam}}, {{t+|et|propaganda}}, {{t-|et|kuulutus}}
 * Finnish: {{t|fi|mainos}}, {{t|fi|mainostus}}
@@ -89,7 +87,9 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * Romanian: {{t|ro|anunț|n}}  [[publicitate]] {{f}}, {{t|ro|reclamă|f}}
 * Russian: {{t+|ru|реклама|f|tr=rekláma}}, {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t|ru|анонс|m|tr=anóns}}, {{t|ru|заявление|n|tr=zajavlénije}}
 * Scottish Gaelic: {{t|gd|sanas-reic|m}}
-* Serbo-Croatian: {{t|sh|oglas}}, {{t|sh|objavljenje}}, {{t|sh|izveštenje}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|реклама|f}}, {{t|sh|оглас|m}}, {{t|sh|објављење}}, {{t|sh|извештење}}
+*: Roman: {{t|sh|reklama|f}}, {{t|sh|oglas|m}}, {{t|sh|objavljenje}}, {{t|sh|izveštenje}}
 * Slovene: {{t+|sl|oglas|m}}, {{t-|sl|reklama|f}}
 * Spanish: {{t-|es|anuncio|m}}, {{t+|es|publicidad|f}}, {{t+|es|reclamo|m}}
 * Swedish: {{t|sv|annons}}, {{t|sv|annonsering}}, {{t|sv|reklam}}
@@ -109,7 +109,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * German: {{t|de|Anzeige|f}}, {{t|de|Bekanntmachung|f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}, {{t+|el|αγγελία|f|tr=agelía}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[بۆزانین]]}}
+*: Sorani: {{t|ku|بۆزانین}}
 {{trans-mid}}
 * Macedonian: {{t|mk|оглас|m|tr=óglas}}
 * Polish: {{t+|pl|ogłoszenie|n}}, {{t-|pl|anons|m}}
