t+tr:[[maksimum]] t-balance ([[WT:EDIT|Assisted]]) <maximum#18513594>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -75,9 +75,10 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 {{trans-top|highest degree}}
 * Finnish: {{t+|fi|maksimi|alt=maksimi-}}
 * Italian: {{t+|it|massimo|m}}
-{{trans-mid}}
 * Spanish: {{t+|es|máximo}}
+{{trans-mid}}
 * [[Telugu]]: [[గరిష్ఠ]] (garishTha)
+* Turkish: {{t|tr|maksimum}}
 {{trans-bottom}}
 
 ===Derived terms===
