--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -46,24 +46,24 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 
 ====Translations====
 {{trans-top|lowest limit}}
-* Chinese: [[最小]] (zui xiao, zui4 xiao3), [[極小值]] (zuixiaozhi, zui4xiao3zhi2)
+* Chinese:
 *: Mandarin: {{t|cmn|最小|tr=zuìxiǎo|sc=Hani}}, {{t|cmn|最小值|tr=zuìxiǎozhí|sc=Hani}}, {{t|cmn|最低|tr=zuìdī|sc=Hani}}, {{t|cmn|極小|sc=Hani}}, {{t|cmn|极小|tr=jíxiǎo|sc=Hani}}
 * Czech: {{t+|cs|minimum|n}}
 * Esperanto: {{t-|eo|minimumo|xs=Esperanto}}
 * Finnish: {{t+|fi|minimi}}
-* French: {{t+|fr|minimum}}
+* French: {{t+|fr|minimum|m}}
 * German: {{t+|de|Minimum|n}}
 * Italian: {{t+|it|minimo|m}}
 {{trans-mid}}
-* Japanese: [[最小]] (saishou), [[最低]] (saitei), [[極小]] (kyokushou), {{t|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
+* Japanese: {{t|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
 * Latin: {{t-|la|minimum}}
 * Romanian: {{t-|ro|minimum}}
 * Russian: {{t+|ru|минимум|m|tr=mínimum}}
 * Spanish: {{t+|es|mínimo}}
 * Swedish: {{t+|sv|minimum|n}}
-* [[Telugu]]: [[కనిష్టం]] (kanishTaM)
+* Telugu: [[కనిష్టం]] (kanishTaM)
 * Vietnamese: {{t+|vi|tối thiểu|xs=Vietnamese}}
-* [[Volapük]]: {{t-|vo|minum}}
+* Volapük: {{t-|vo|minum}}
 {{trans-bottom}}
 
 [[Category:English nouns with irregular plurals]]
