--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -66,6 +66,22 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * Volapük: {{t-|vo|minum}}
 {{trans-bottom}}
 
+===Adjective===
+{{en-adj|-}}
+
+# To the lowest degree.
+
+====Translations====
+{{trans-top|lowest degree}}
+* Chinese:
+*: Mandarin: {{t|cmn|最小|tr=zuìxiǎo|sc=Hani}}
+* French: {{t|fr|minimum}}
+{{trans-mid}}
+* German: {{t|de|minimal}}
+* Japanese: {{t|ja|最小|tr=さいしょう, saishō|sc=Jpan}}
+* Russian: {{t|ru|минимальный|tr=minimálʹnyj|sc=Cyrl}}
+{{trans-bottom}}
+
 [[Category:English nouns with irregular plurals]]
 
 ----
