--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -47,7 +47,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 ====Translations====
 {{trans-top|lowest limit}}
 * Chinese:
-*: Mandarin: {{t|cmn|最小|tr=zuìxiǎo|sc=Hani}}, {{t|cmn|最小值|tr=zuìxiǎozhí|sc=Hani}}, {{t|cmn|最低|tr=zuìdī|sc=Hani}}, {{t|cmn|極小|sc=Hani}}, {{t|cmn|极小|tr=jíxiǎo|sc=Hani}}
+*: Mandarin: {{t|cmn|最小|tr=zuìxiǎo|sc=Hani}}, {{t|cmn|最低|tr=zuìdī|sc=Hani}}, {{t|cmn|極小|sc=Hani}}, {{t|cmn|极小|tr=jíxiǎo|sc=Hani}}, {{t|cmn|最小值|tr=zuìxiǎozhí|sc=Hani}} {{qualifer|lowest value}}
 * Czech: {{t+|cs|minimum|n}}
 * Esperanto: {{t-|eo|minimumo|xs=Esperanto}}
 * Finnish: {{t+|fi|minimi}}
