--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -26,7 +26,7 @@ Of [[Jamaica]]n and [[Multicultural London English]] origin.
 ====Noun====
 {{en-noun}}
 
-# {{UK|MLE|slang}} {{n-g|Informal address}}: [[mate]], [[blud]], [[bruv]].
+# {{UK|Multicultural London English|slang}} {{n-g|Informal address}}: [[mate]], [[blud]], [[bruv]].
 
 ----
 
