--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -6,7 +6,7 @@
 * [[againe]] {{qualifier|obsolete}}
 * [[agayne]] {{qualifier|obsolete}}
 * [[ageyne]] {{qualifier|obsolete}}
-* [[agin]] (colloquial or humorous)
+* [[agin]] {{qualifier|colloquial or humorous}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/əˈɡeɪn/|/əˈɡɛn/}} {{X-SAMPA|/@"geIn/}}
@@ -58,59 +58,57 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * [[once again]]
 
 ====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|another time}}
-* Afrikaans: [[weer]], [[alweer]]
-* Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) ʾúxrā}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) ʾúxrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثانية|tr=ṯāniyatan|alt=ثانيةً|sc=Arab}}
+* Afrikaans: {{t|af|weer}}, {{t|af|alweer}}
+* Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) ʾúxrā}}, {{t|ar|كرة أخرى|f|tr=kárra(tan) ʾúxrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثانية|tr=ṯāniyatan|alt=ثانيةً|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|تاني|tr=tani|sc=Arab}}, {{tø|arz|كمان|tr=kaman - kman|sc=Arab}}
 * Armenian: {{t-|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
-* Basque: [[berriro]]
+* Basque: {{t|eu|berriro}}
 * Belarusian: {{t|be|зноў|tr=znoŭ|sc=Cyrl}}, {{t|be|яшчэ раз|tr=jaščé raz|sc=Cyrl}}
 * Bengali: {{t-|bn|আবার|tr=abar|sc=Beng|xs=Bengali}}
 * Berber:
 *: Tashelhit: {{tø|shi|dax}}
-* Breton: [[adarre]]
-* Bulgarian: [[отново]] (otnovo), [[пак]] (pak), {{t|bg|отново|tr=otnovo|sc=Cyrl}}, {{t|bg|пак|tr=pak|sc=Cyrl}}
+* Breton: {{t|br|adarre}}
+* Bulgarian: {{t|bg|отново|tr=otnovo}}, {{t|bg|пак|tr=pak}}, {{t|bg|отново|tr=otnovo|sc=Cyrl}}, {{t|bg|пак|tr=pak|sc=Cyrl}}
 * Burmese: {{t|my|နောက်တဖန်|sc=Mymr|tr=nauktăhpan|xs=Burmese}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}
 * Chinese:
 *: Mandarin: {{qualifier|of future events}} {{t-|cmn|再|tr=zài|sc=Hani}}, {{qualifier|of past events}} {{t-|cmn|又|tr=yòu|sc=Hani}}, {{qualifier|once again}} {{t-|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn|sc=Hani}}, {{t-|cmn|重新|tr=chóngxīn|sc=Hani}}
-* Crimean Tatar: [[kene]]
-* Serbo-Croatian: {{t|sh|opet}}
+* Crimean Tatar: {{t|crh|kene}}
 * Czech: {{t|cs|zase}}, {{t|cs|opět}}, {{t|cs|znova}}
 * Danish: {{t+|da|igen}}
 * Dutch: {{t+|nl|opnieuw}}, {{t+|nl|nogmaals}}, {{t+|nl|weer}}, {{t+|nl|alweer}}, {{t-|nl|wederom}}
 * Esperanto: {{t-|eo|denove|xs=Esperanto}}, {{t-|eo|ree|xs=Esperanto}}
-* Estonian: [[jälle]]
+* Estonian: {{t|et|jälle}}
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t-|fi|toistamiseen}}, {{t-|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Georgian: {{t|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t|ka|ისევ|tr=isev|sc=Geor}}
 * German: {{t+|de|erneut}}, {{t-|de|noch einmal}}, {{t+|de|nochmal}}, {{t+|de|wieder}}, {{t|de|schon wieder}}
 * Greek: {{t+|el|ξανά|tr=xaná}}, {{t+|el|πάλι|tr=páli}}
-* Hawaiian: [[hou]]
+* Hawaiian: {{t|haw|hou}}
 * Hebrew: {{t-|he|שוב|tr=šuv}}
 * Hindi: {{t-|hi|फिर|tr=phir|xs=Hindi}}, {{t|hi|फिर से|tr=phir se|sc=Deva}}, {{t|hi|दुबारा|tr=dubārā|sc=Deva}}
 * Hungarian: {{t+|hu|újra}}, {{t+|hu|megint}}, {{t+|hu|ismét}}
 * Icelandic: {{t+|is|aftur}}, {{t|is|á ný}}
-* Ido: [[ankore un foyo]], [[ankorfoye]]
+* Ido: {{t|io|ankore un foyo}}, {{t|io|ankorfoye}}
 * Indonesian: {{t-|id|lagi|xs=Indonesian}}
 * Interlingua: {{t|ia|de novo}}
 * Irish: {{t+|ga|arís|xs=Irish}}
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
-* Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}},  {{t-|ja|再び|tr=ふたたび, futatabi}},  {{t|ja|もう一度|tr=mō ichido}},  {{t|ja|あらためて|tr=aratamete}}
+* Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}}, {{t-|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t|ja|あらためて|tr=aratamete}}
 * {{trreq|kn}}
 * Khmer: {{t|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t|ko|다시|tr=dasi|sc=Kore}}, {{t|ko|또|tr=tto|sc=Kore}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[دیسان]]}}, {{ku-Arab|[[هه‌مدیس]]}}, {{ku-Arab|[[دوباره‌]]}}
+*: Sorani: {{t|ku|دیسان}}, {{t|ku|هه‌مدیس}}, {{t|ku|دوباره‌}}
 * Lao: {{t-|lo|ອີກ|tr='iik|sc=Laoo|xs=Lao}}
 * Latin: {{t-|la|denuo}}, {{t|la|iterum}}
 * Latvian: {{t-|lv|pret|xs=Latvian}}
 * Lithuanian: {{t+|lt|vėl|xs=Lithuanian}}
 * Macedonian: {{t|mk|пак|tr=pak|sc=Cyrl}}, {{t|mk|повторно|tr=povtorno|sc=Cyrl}}
 * Malayalam: {{t|ml|വീണ്ടും|sc=Mlym|xs=Malayalam}}
-* Maltese: [[darb' oħra]]
+* Maltese: {{t|mt|darb' oħra}}
 * Maori: {{t-|mi|anō|xs=Maori}}
 * Mongolian: {{t|mn|дахин|tr=dahin|sc=Cyrl|xs=Mongolian}}
 * Nahuatl: {{t-|nah|occeppa|xs=Nahuatl}}
@@ -119,7 +117,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Pashto: {{t|ps|بيا|tr=byâ}}
 * Persian: {{t|fa|دگربار|tr=degarbâr}}, {{t|fa|دوباره|tr=do-bâre|sc=fa-Arab}}, {{t|fa|باز|tr=bâz|sc=fa-Arab}}
 * Polish: {{t|pl|ponownie}}, {{t|pl|znowu}}, {{t|pl|jeszcze raz}}
-* Portuguese: [[de novo]], [[outra vez]], [[novamente]]
+* Portuguese: {{t|pt|de novo}}, {{t|pt|outra vez}}, {{t|pt|novamente}}
 * Romanian: {{t-|ro|iarăși}}, {{t-|ro|din nou}}
 * Russian: {{t+|ru|опять|tr=opját’}}, {{t+|ru|снова|tr=snóva}}, {{t|ru|ещё раз|tr=ješčó raz|sc=Cyrl}}
 * Sanskrit: {{t|sa|पुनः|tr=punaḥ|sc=Deva}}
@@ -133,7 +131,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Spanish: {{t-|es|otra vez}}, {{t+|es|de nuevo}}
 * Swedish: {{t+|sv|igen}}, {{t|sv|ånyo}}, {{t+|sv|åter}}, {{t|sv|på nytt}}, {{t|sv|å nyo}}
 * Tagalog: {{t-|tl|muli|xs=Tagalog}}, {{t|tl|nanaman|xs=Tagalog}}, {{t|tl|ulit|xs=Tagalog}}
-* Telugu: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
+* Telugu: {{t|te|మళ్లీ|tr=mallee}}, {{t|te|మరలా|tr=maralaa}}
 * Thai: {{t+|th|อีก|tr=èek}},  {{t-|th|ใหม่|tr=mài}}
 * Tok Pisin: {{t|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t|tr|yine}}, {{t|tr|bir daha}}
@@ -191,25 +189,21 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * {{IPA|/əˈɡen/|/əˈɡɛn/|lang=sco}}
 
 ===Adverb===
-'''again'''
+{{head|sco|adverb}}
 
 # [[back]], in the opposite direction
-# [[#English|again]], [[anew]]
+# {{l|en|again}}, [[anew]]
 
 ===Preposition===
-'''again'''
+{{head|sco|preposition}}
 
 # [[opposite]], [[facing]]
 # [[against]], opposed to (literally or figuratively)
 
 ===Conjunction===
-'''again'''
+{{head|sco|conjunction}}
 
 # in preparation for, in advance of
-
-[[Category:Scots adverbs]]
-[[Category:Scots conjunctions]]
-[[Category:Scots prepositions]]
 
 [[ar:again]]
 [[cs:again]]
