--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -82,6 +82,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 {{trans-mid}}
 * Ladin: [[tas]]
 * Lakota: {{tø|lkt|ȟoká}}
+* {{trreq|Latin}}
 * Latvian: [[āpsis]] {{m}}
 * Lithuanian: {{t|lt|barsukas}}, {{t|lt|opšrus}}
 * Lower Sorbian: [[jazw]], [[šwińc]]
