--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -13,6 +13,7 @@ From {{etyl|enm}} {{term|dormous|lang=enm}}, of uncertain origin. Possibly from 
 {{en-noun|dormice}}
 
 # Any of several species of small, mostly [[European]] [[rodent]]s of the family ''[[Gliridae]]''; also called ''[[Myoxidae]]'' or ''[[Muscardinidae]]'' by some taxonomists.
+# {{UK}} {{taxlink|Muscardinus avellanarius|species}}, the [[hazel dormouse]].
 # {{figuratively}} A person who sleeps a great deal, or who falls asleep readily (by analogy with the sound hibernation of the dormouse).
 
 ====Translations====
