--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -1,12 +1,14 @@
 ==English==
 
 ===Etymology 1===
-From a corruption or variation (Spenser) of {{term|embathe|lang=en}}.
+From {{prefix|em|bay|gloss2=bathe}}.
 
 ====Verb====
 {{en-verb|embay|ing}}
 
-# {{transitive|obsolete}} To [[bathe]]; [[soothe]] or [[lull]].
+# {{transitive|obsolete}} To [[bathe]]; to [[steep]].
+#*'''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.11:
+#*:Sweete Love, that doth his golden wings '''embay''' / In blessed Nectar and pure Pleasures well […].
 
 ===Etymology 2===
 From {{prefix|em|bay}}.
