--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -33,6 +33,7 @@
 * French: {{t+|fr|consommation}}, {{t+|fr|consommer|m}}, {{t+|fr|consumer|m}}
 * German: {{t+|de|Konsum|m}}, {{t+|de|Verzehr|m}}
 {{trans-mid}}
+* Greek: {{t|el|κατανάλωση|f|tr=katanálosi|sc=Grek}}
 * Hebrew: {{t-|he|צריכה|tr=tzrikha|f}} {{qualifier|act of consuming goods}}
 * Hungarian: {{t+|hu|fogyasztás}}
 * Interlingua: {{t-|ia|consumo}}
@@ -54,6 +55,7 @@
 * French: {{t+|fr|consommation|f}}
 {{trans-mid}}
 * German: {{t+|de|Verbrauch|m}}, {{t-|de|Verbrauchswert|m}}, {{t+|de|Verzehr|m}}
+* Greek: {{t|el|κατανάλωση|f|tr=katanálosi|sc=Grek}}
 * Khmer: {{t-|km|បម្រើបម្រាស់|tr=bom rer bom ras|sc=Khmr}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
 * Scottish Gaelic: {{t-|gd|caitheamh|f}}
@@ -64,6 +66,7 @@
 {{trans-top|wasting-away of the human body through disease}}
 * Dutch: {{t-|nl|wegteren|n}}
 * Finnish: {{t-|fi|riutuminen}}
+* Greek: {{t|el|φθίση|f|tr=fthísi|sc=Grek}}
 {{trans-mid}}
 * Russian: {{t+|ru|истощение|n|tr=istoščénije}}
 * Scottish Gaelic: {{t-|gd|caitheamh|f}}
