--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia|AT}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|at||at, near, to|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|ad||to, near, by|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|at||at|lang=sco}}, {{etyl|frr|-}} {{term|et|lang=frr}}, {{term|it||at|lang=frr}}, {{etyl|da|-}} {{term|at||to|lang=da}}, {{etyl|fo|-}} {{term|at||at, to, toward|lang=fo}}, {{etyl|no|-}} {{term|åt||to|lang=no}}, {{etyl|sv|-}} {{term|åt||for, toward|lang=sv}}, {{etyl|is|-}} {{term|að||to, towards|lang=is}}, {{etyl|got|-}} {{term|𐌰𐍄||at|tr=at|lang=got}}, {{etyl|la|-}} {{term|ad||to , near|lang=la}}.
+From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|at||at, near, to|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|ád||near, at|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|at||at|lang=sco}}, {{etyl|frr|-}} {{term|et|lang=frr}}, {{term|it||at|lang=frr}}, {{etyl|da|-}} {{term|at||to|lang=da}}, {{etyl|fo|-}} {{term|at||at, to, toward|lang=fo}}, {{etyl|no|-}} {{term|åt||to|lang=no}}, {{etyl|sv|-}} {{term|åt||for, toward|lang=sv}}, {{etyl|is|-}} {{term|að||to, towards|lang=is}}, {{etyl|got|-}} {{term|𐌰𐍄||at|tr=at|lang=got}}, {{etyl|la|-}} {{term|ad||to , near|lang=la}}.
 
 ===Pronunciation===
 * {{qualifier|stressed}} {{enPR|ăt}}, {{IPA|/æt/}}, {{X-SAMPA|/{t/}}
