--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -121,6 +121,9 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 
 ==Latin==
 
+===Etymology===
+From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
+
 ===Noun===
 {{la-noun|mania|maniae|maniae|f|first}}
 
