--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|dab=bind}}
 
 ===Etymology===
-From {{etyl|ang}} ''[[bindan]]'', from {{etyl|gem-pro|en}} {{recons|bindanan|lang=gem-pro}} (compare West Frisian {{term|bine|lang=fy}}, Dutch/German ''[[binden]]''), from {{etyl|ine-pro|en}} {{recons|bhendh-|lang=ine-pro}} 'to tie' (compare Welsh {{term|benn|lang=cy}} 'cart', Latin {{term|offendix|offendīx|lang=la}} 'knot, band', Lithuanian {{term|beñdras|lang=lt}} 'partner', Albanian {{term|bend||servant,henchman|lang=sq}}, {{term|bind||to convince, persuade, tame|lang=sq}}, Ancient Greek {{term|πεῖσμα|tr=peisma||cable, rope|lang=grc}}, Sanskrit {{term|badhnāti}}{{rfscript|Devanagari|lang=sa}} 'he binds').
+From {{etyl|ang}} {{term|bindan|lang=en}}, from {{etyl|gem-pro|en}} {{recons|bindanan|lang=gem-pro}} (compare West Frisian {{term|bine|lang=fy}}, Dutch {{term|binden|lang=nl}}), from {{etyl|ine-pro|en}} {{recons|bʰendʰ-||to tie|lang=ine-pro}} (compare Welsh {{term|benn||cart|lang=cy}}, Latin {{term|offendix|offendīx|knot, band|lang=la}}, Lithuanian {{term|beñdras||partner|lang=lt}}, Albanian {{term|bend||servant,henchman|lang=sq}}, {{term|bind||to convince, persuade, tame|lang=sq}}, Ancient Greek {{term|πεῖσμα|tr=peisma||cable, rope|lang=grc}}, Sanskrit {{term|tr=badhnāti|lang=sa}}{{rfscript|Devanagari|lang=sa}}).
 
 ===Pronunciation===
 * {{IPA|/baɪnd/}}
