--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -177,7 +177,7 @@ The suffix has been used since around the 17th and 18th century. It is most like
 ==Vietnamese==
 
 ===Etymology===
-Sino-Vietnamese; Vietnamese reading of Han character [[過]]
+{{vi-etym-sino|過|pass}}
 
 ===Preposition===
 {{head|vi|preposition}}
@@ -185,12 +185,12 @@ Sino-Vietnamese; Vietnamese reading of Han character [[過]]
 # [[through]], [[across]], [[by]]
 
 ===Adjective===
-{{head|vi|adjective}}
+{{vi-adj}}
 
 # [[last#Adjective|last]]
 
 ===Verb===
-{{head|vi|verb}}
+{{vi-verb}}
 
 # {{intransitive|lang=vi}} To be [[gone]].
 # {{intransitive|lang=vi}} To [[cross#Verb|cross]].
