--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -15,7 +15,7 @@
 # A [[mammal]] rather like a [[weasel]], but which was originally bred from the [[polecat]] and often trained to [[hunt]] [[rat]]s or [[rabbit]]s in [[England]].
 
 ====Synonyms====
-* {{taxlink|Mustela putorius|species}}
+* {{taxlink|Mustela putorius furo|subspecies}}
 
 ====Translations====
 {{trans-top|the mammal ''Mustela putorius furo''}}
