--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -13,10 +13,11 @@
 {{en-noun}}
 
 # An often domesticated [[mammal]] rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
+# The [[black-footed ferret]], ''[[Mustela nigripes]]''.
 # An diligent [[searcher]].
 
 ====Synonyms====
-* {{sense|mammal}} {{taxlink|Mustela putorius furo|subspecies}}
+* {{sense|domesticated polecat}} {{taxlink|Mustela putorius furo|subspecies}}
 
 ====Translations====
 {{trans-top|the mammal ''Mustela putorius furo''}}
