--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm}} {{term|plege|plege|lang=enm}}, from {{etyl|xno}} {{term|plege|
 {{trans-top|solemn promise}}
 * Arabic: {{Arab|[[ضمان]]}} {{IPAchar|(ɖamān)}} {{m}}
 * Armenian: {{t-|hy|ուխտ|tr=uxt}}
+* Aromanian: {{t|rup|ligãmintu}}
 * Chinese:
 *: Mandarin: {{t-|cmn|誓言|tr=shìyán|sc=Hani}}, {{t|cmn|誓詞|sc=Hani}}, {{t|cmn|誓词|tr=shìcí|sc=Hani}}
 * Finnish: {{t+|fi|lupaus}}
