Undo revision 18600633 by [[Special:Contributions/EncycloPetey|EncycloPetey]] ([[User talk:EncycloPetey|talk]]) it's a proper noun like the law of gravity. <FOIL#18600658>

--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -8,9 +8,8 @@
 Thus the product is <math>8x^2+6xy+16x+12y</math>.}}
 ===Etymology===
 {{acronym}} of {{term|first}} {{term|outer}} {{term|inner}} {{term|last}} or similar.
-
-===Noun===
-{{en-noun|-}}
+===Proper noun===
+{{en-proper noun}}
 
 # A particular [[algorithm]] for [[multiply]]ing two [[binomial]]s.
 
