--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -154,6 +154,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * Bulgarian: {{t+|bg|прост|m|tr=prost}}, {{t+|bg|малоумен|m|tr=maloúmen}}
 * Dutch: {{t+|nl|achterlijk}}, {{t+|nl|simpel}}
 * French: {{t|fr|simple|m|f}}
+* French: {{t|fr|simple|m|f}}
 * German: {{t+|de|einfach}}
 * Polish: {{t+|pl|prostak}} ''(noun)''
 * Romanian: {{t-|ro|simplu}}
