t+fr:[[simple]] ([[WT:EDIT|Assisted]]) <simple#18628759>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -177,6 +177,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 
 ====Translations====
 {{trans-top|preparation from one plant}}
+* French: {{t|fr|simple|m}}
 * Spanish: {{t+|es|simple|m}}
 {{trans-mid}}
 {{trans-bottom}}
