--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -5,6 +5,10 @@
 
 ===Pronunciation===
 * {{term|מדינת ישראל|מְדִינַת יִשְׂרָאֵל|State of Israel|tr=medinát yisra'él|lang=he}}: {{audio|He-Medinat_Israel.ogg|Audio}}
+* {{a|IL}} {{IPA|/jis.ʁaˈel/|lang=he}}
+* {{a|Ashkenazi Hebrew}} {{IPA|/jɪsˈʀɔ.əl/|/jɪsˈʀɔɪl/|lang=he}}
+* {{a|Tiberian}} {{IPA|/jis.rɔˈel/|lang=he}}
+* {{a|hbo}} {{IPA|/jis.raːˈeːl/|lang=he}}
 
 ===Proper noun===
 [[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
