--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -22,9 +22,9 @@
 ====Related terms====
 * {{l|he|ארץ ישראל|אֶרֶץ יִשְׂרָאֵל}}
 * {{l|he|ישראלי|יִשְׂרְאֵלִי}}
-* {{l|he|עם ישראל|עַם יִשְרָאֵל}}
-* {{l|he|בני ישראל|בְּנֵי יִשְרָאֵל}}
-* {{l|he|מדינת ישראל|מְדִינַת יִשְרָאֵל}}
+* {{l|he|עם ישראל|עַם יִשְׂרָאֵל}}
+* {{l|he|בני ישראל|בְּנֵי יִשְׂרָאֵל}}
+* {{l|he|מדינת ישראל|מְדִינַת יִשְׂרָאֵל}}
 
 [[Category:he:Countries]]
 
