--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -14,7 +14,7 @@
 ===Noun===
 {{en-noun}}
 
-# Any of several large ground-dwelling [[rodent]]s of the [[genera]] ''[[Marmota]]'' and ''[[Cynomys]]'' in the [[squirrel]] family.
+# Any of several large ground-dwelling [[rodent]]s of the [[genera]] ''[[Marmota]]'' and {{taxlink|Cynomys|genus}} in the [[squirrel]] family.
 
 ====Derived terms====
 {{der-top|marmot}}
