--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -46,15 +46,13 @@
 * {{audio|Cy-blew.ogg|Audio}}
 
 ===Noun===
-'''blew''' (countable and uncountable; plural '''blew''')
+{{cy-noun||blew}} (countable and uncountable)
 
 # [[hair#Noun|hair]]
 # [[fur#Noun|fur]]
 
 ====Mutation====
 {{cy-mut-b|lew}}
-
-[[Category:Welsh nouns]]
 
 [[cy:blew]]
 [[de:blew]]
