--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -69,7 +69,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Georgian: {{t-|ka|მაჩვი|tr=mač’vi|sc=Geor}}
 * German: {{t+|de|Dachs|m}}
 * Gothic: {{tø|got|𐌸𐌰𐌷𐍃𐌿𐍃|m|tr=þahsus|sc=Goth}}
-* Greek: {{t+|el|ασβός|m}}
+* Greek: {{t+|el|ασβός|m|tr=asvós}}
 * Hebrew: {{t+|he|גירית|f|alt=גִּירִית}}
 * Hungarian: {{t+|hu|borz}}
 * Icelandic: {{t-|is|greifingi|m}}
