--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -93,60 +93,127 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 
 ====Translations====
 {{trans-top|uncomplicated}}
+* {{trreq|af}}
 * Albanian: {{t+|sq|thjeshtë}}
 * Arabic: {{t+|ar|بسيط|tr=basiiT|sc=Arab}}
+* {{trreq|an}}
 * Armenian: {{t-|hy|պարզ|tr=parz}}, {{t-|hy|հասարակ|tr=hasarak}}
+* {{trreq|as}}
+* {{trreq|ast}}
+* {{trreq|ay}}
+* {{trreq|az}}
+* {{trreq|ba}}
+* {{trreq|eu}}
+* {{trreq|be}}
+* {{trreq|bn}}
+* {{trreq|br}}
 * Bulgarian: {{t+|bg|прост|m|tr=prost}}
+* {{trreq|my}}
 * Catalan: {{t-|ca|simple}}
+* {{trreq|chr}}
+* {{trreq|ny}}
 * Chinese:
 *: Mandarin: {{t|cmn|簡單|sc=Hani}}, {{t|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t|cmn|容易|tr=róngyì|sc=Hani}}
+* {{trreq|co}}
 * Czech: {{t+|cs|jednoduchý|m}}
+* {{trreq|da}}
+* {{trreq|dv}}
 * Dutch: {{t+|nl|eenvoudig}}, {{t+|nl|simpel}}
 * Esperanto: {{t+|eo|simpla}}
 * Estonian: {{t+|et|lihtne}}
+* {{trreq|ee}}
+* {{trreq|ext}}
 * Finnish: {{t+|fi|yksinkertainen}} ({{t-|fi|simppeli}}, ''slang'')
 * French: {{t+|fr|simple}}
+* {{trreq|fur}}
+* {{trreq|gl}}
 * Georgian: {{t-|ka|მარტივი|tr=martivi|sc=Geor}}, {{t-|ka|უბრალო|tr=ubralo|sc=Geor}}, {{t-|ka|სადა|tr=sada|sc=Geor}}
 * German: {{t+|de|einfach}}, {{t+|de|simpel}}
+* {{trreq|el}}
+* {{trreq|gu}}
 * Haitian Creole: {{tø|ht|senp}}
+* {{trreq|ha}}
+* {{trreq|haw}}
 * Hebrew: {{t-|he|פשוט}}
 * Hindi: {{t-|hi|सरल|tr=saral|sc=Deva}}, {{qualifier|easy}} {{t-|hi|आसान|tr=āsān|sc=Deva}}
 * Hungarian: {{t+|hu|egyszerű}}
+* {{trreq|is}}
 * Ido: {{t+|io|simpla}}
+* {{trreq|ig}}
+* {{trreq|id}}
+* {{trreq|ia}}
+* {{trreq|ie}}
+* {{trreq|ga}}
 * Italian: {{t+|it|semplice}}
 * Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
+* {{trreq|jv}}
+* {{trreq|kn}}
 * Kazakh: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl}}
+* {{trreq|km}}
+* {{trreq|rw}}
+* {{trreq|rn}}
 * Korean: {{t-|ko|간단한|tr=gandan-han|sc=Kore}} ({{t+|ko|簡單|sc=Kore}} + {{t+|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
+* {{trreq|lo}}
 {{trans-mid}}
 * Latin: {{t+|la|simplex}}
 * Latvian: {{t-|lv|prasts}}, {{t-|lv|vienkāršs}}
 * Lithuanian: {{t+|lt|paprastas}}
 * Lojban: {{t-|jbo|sampu}}
+* {{trreq|lg}}
+* {{trreq|lb}}
+* {{trreq|ml}}
+* {{trreq|gv}}
+* {{trreq|mr}}
+* {{trreq|mwl}}
+* {{trreq|ne}}
 * Novial: {{t|nov|simpli}}
+* {{trreq|oc}}
 * {{trreq|ang}}
+* {{trreq|or}}
+* {{trreq|ps}}
 * Persian: {{t+|fa|ساده|sc=fa-Arab}}
 * Polish: {{t+|pl|prosty|m}}, {{t+|pl|łatwy|m}}
 * Portuguese: {{t+|pt|simples}}
+* {{trreq|pa}}
+* {{trreq|raj}}
 * Romanian: {{t-|ro|simplu|m|n}}, {{t-|ro|necomplicat|m|n}}
+* {{trreq|rm}}
 * Russian: {{t+|ru|простой|m|tr=prostój}}, {{qualifier|easy}} {{t+|ru|лёгкий|tr=ljóxkij|sc=Cyrl}}
+* {{trreq|sco}}
 * Scottish Gaelic: {{t-|gd|sìmplidh}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|једноставан|alt=је̏дноста̄ван|sc=Cyrl}}
 *: Roman: {{t-|sh|jednostavan|alt=jȅdnostāvan}}
+* {{trreq|scn}}
 * Silesian: {{tø|szl|ajnfachowy}}
+* {{trreq|sd}}
+* {{trreq|si}}
+* {{trreq|sk}}
 * Slovene: {{t|sl|preprost}}, {{t|sl|enostaven}}
+* {{trreq|so}}
 * Spanish: {{t+|es|simple}}
 * Swedish: {{t+|sv|enkel}}
 * Tamil: {{t+|ta|எளிய|tr=eḷiya}}, {{t+|ta|எளிது|tr=eḷitu}}, {{t-|ta|எளிமையான|tr=eḷimaiyāNa}}
 * Telugu: {{t|te|సరళమైన|tr=saraLamaina|sc=Telu}}
 * Thai: {{t-|th|ง่าย|tr=ngâai|sc=Thai}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
+* {{trreq|tk}}
 * Ukrainian: {{t+|uk|простий|tr=prostýj|sc=Cyrl}}
 * Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān|sc=ur-Arab}}
+* {{trreq|ug}}
+* {{trreq|uz}}
 * Vietnamese: {{t+|vi|giản dị}}, {{t+|vi|mộc mạc}}
+* {{trreq|vo}}
+* {{trreq|wa}}
+* {{trreq|cy}}
 * West Frisian: {{t+|fy|ienfâldich}}
+* {{trreq|wo}}
+* {{trreq|xh}}
+* {{trreq|yi}}
+* {{trreq|yo}}
+* {{trreq|zu}}
 {{trans-bottom}}
 
 {{trans-top|simple-minded}}
