--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -186,15 +186,22 @@ Partly imitative, also influenced by {{term|burble}}.
 ====Translations====
 {{trans-top|to rise up in bubbles}}
 * Bulgarian: {{t+|bg|кипя}}, {{t+|bg|клокоча}}
+* {{trreq|eo}}
 * Finnish: {{t-|fi|kuplia}}, {{t-|fi|poreilla}}, {{t-|fi|porista}}
 * French: {{t+|fr|bouillonner}}
 * German: {{t+|de|blubbern}}
+* {{trreq|el}}
 * Hungarian: {{t+|hu|buborékol}}, {{t+|hu|bugyborékol}}
+* {{trreq|io}}
+* {{trreq|km}}
 * Korean: {{t+|ko|부글거리다|tr=bugeul-georida|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|بڵق کردن|sc=ku-Arab}}, {{t|ku|بڵقه‌بڵق کردن|sc=ku-Arab}}
 {{trans-mid}}
+* {{trreq|mwl}}
 * Portuguese: {{t+|pt|borbulhar}}
+* {{trreq|pa}}
+* {{trreq|raj}}
 * Spanish: {{t-|es|burbujear}}
 * Swedish: {{t+|sv|bubbla}}
 * Welsh: {{t-|cy|byrlymu}}
