--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -44,14 +44,20 @@ Partly imitative, also influenced by {{term|burble}}.
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
+* {{trreq|af}}
+* {{trreq|ar}}
+* {{trreq|an}}
 * Armenian: {{t-|hy|պղպջակ|tr=pġpǰak}}
 * Azeri: {{t+|az|köpük}}
 * Bulgarian: {{t-|bg|мехурче|n}}
 * Catalan: {{t-|ca|bombolla|f}}
+* {{trreq|chr}}
 * Chinese:
 *: Mandarin: {{t-|cmn|泡|tr=pào|sc=Hani}}, {{t|cmn|氣泡|sc=Hani}}, {{t|cmn|气泡|tr=qìpào|sc=Hani}}, {{t|cmn|泡沫|tr=pàomò|sc=Hani}}
 * Crimean Tatar: {{tø|crh|köpük}}
 * Czech: {{t-|cs|bublina|f}}
+* {{trreq|da}}
+* {{trreq|dv}}
 * Dutch: {{t+|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
@@ -62,15 +68,18 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hungarian: {{t+|hu|buborék}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]]
+* {{trreq|km}}
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
 {{trans-mid}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t+|lv|burbulis|m}}
+* {{trreq|lb}}
 * Macedonian: {{t-|mk|меур|m|tr=méur}}
 * Malay: {{t-|ms|buih}}
 * Norwegian: {{t-|no|bubla|f}}
+* {{trreq|nov}}
 * Polish: {{t+|pl|bańka|f}}
 * Portuguese: {{t+|pt|bolha|f}}
 * Romanian: {{t+|ro|balon|n}}, {{t-|ro|bășică|f}}, {{t-|ro|bulă|f}}
@@ -81,7 +90,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Spanish: {{t+|es|burbuja|f}}, {{t-|es|pompa|f}} {{qualifier|soap bubble}}
 * Swedish: {{t+|sv|bubbla|c}}, {{t+|sv|såpbubblor}} {{qualifier|soap bubble}}
 * Tagalog: {{t-|tl|bula}}
-* Telugu: {{t+|te|బుడగ|tr=buDaga}}
+* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 * Turkish: {{t+|tr|köpük}}
 * Welsh: {{t-|cy|bwrlwm|m}}, {{t-|cy|yswigen|f}}
 {{trans-bottom}}
