--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -119,7 +119,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Macedonian: {{t-|mk|меурче|n|tr=méurče}}
 * Portuguese: {{t+|pt|bolha|f}}
 * Russian: {{t+|ru|пузырёк|m}}
-* Telugu: {{t+|te|బుడగ|tr=buDaga}}
+* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
@@ -135,7 +135,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Macedonian: {{t-|mk|меур|m|tr=méur}}
 * Portuguese: {{t+|pt|bolha|f}}
 * Russian: {{t+|ru|пузырь|m|tr=puzýr'}}, {{t+|ru|пузырёк|m|tr=puzyr'ók}}
-* Telugu: {{t+|te|బుడగ|tr=buDaga}}
+* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 {{trans-bottom}}
 
 {{trans-top|period of intense speculation in a market}}
@@ -151,16 +151,16 @@ Partly imitative, also influenced by {{term|burble}}.
 * Japanese: {{t+|ja|バブル|tr=baburu}}
 * Russian: {{t+|ru|пузырь|m|tr=(puzýr'|sc=Cyrl}}
 * Spanish: {{t+|es|burbuja|f}}
-* Telugu: {{t+|te|బుడగ|tr=buDaga}}
+* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|bar}}: [[Blodan]] {{f}}
-* {{ttbc|ka}}: [[ბჟშტი]]
-* {{ttbc|id}}: [[gelembung]]
+* {{ttbc|bar}}: {{t|bar|Blodan|f}}
+* {{ttbc|ka}}: {{t|ka|ბჟშტი}}
+* {{ttbc|id}}: {{t|id|gelembung}}
 {{trans-mid}}
-* {{ttbc|ko}}: [[거품]] (geopum)
-* {{ttbc|lt}}: [[burbulas]] {{m}}
+* {{ttbc|ko}}: {{t|ko|거품|tr=geopum}}
+* {{ttbc|lt}}: {{t|la|burbulas|m}}
 {{trans-bottom}}
 
 ====Related terms====
