--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -83,6 +83,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|ha}}
 * {{trreq|haw}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
+* {{trreq|hi}}
 * Hungarian: {{t+|hu|buborék}}
 * {{trreq|is}}
 * {{trreq|io}}
@@ -93,14 +94,17 @@ Partly imitative, also influenced by {{term|burble}}.
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]]
 * {{trreq|jv}}
+* {{trreq|kn}}
+* {{trreq|kk}}
 * {{trreq|km}}
 * {{trreq|rw}}
 * {{trreq|rn}}
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
-* {{trreq|lo}}
+* {{trreq|ky}}
 {{trans-mid}}
+* {{trreq|lo}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t+|lv|burbulis|m}}
 * {{trreq|lt}}
@@ -131,6 +135,8 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|scn}}
 * {{trreq|sd}}
 * {{trreq|si}}
+* {{trreq|sk}}
+* {{trreq|sl}}
 * {{trreq|so}}
 * Spanish: {{t+|es|burbuja|f}}, {{t-|es|pompa|f}} {{qualifier|soap bubble}}
 * Swedish: {{t+|sv|bubbla|c}}, {{t+|sv|såpbubblor}} {{qualifier|soap bubble}}
@@ -139,8 +145,15 @@ Partly imitative, also influenced by {{term|burble}}.
 * Telugu: {{t+|te|బుడగ|tr=buḍaga}}
 * {{trreq|th}}
 * Turkish: {{t+|tr|köpük}}
+* {{trreq|tk}}
+* {{trreq|uk}}
+* {{trreq|ur}}
+* {{trreq|ug}}
+* {{trreq|vi}}
+* {{trreq|vo}}
 * {{trreq|wa}}
 * Welsh: {{t-|cy|bwrlwm|m}}, {{t-|cy|yswigen|f}}
+* {{trreq|zu}}
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
