--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -116,6 +116,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|mr}}
 * {{trreq|mwl}}
 * {{trreq|ne}}
+* {{trreq|new}}
 * Norwegian: {{t-|no|bubla|f}}
 * {{trreq|nov}}
 * {{trreq|oc}}
@@ -128,7 +129,11 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|pa}}
 * {{trreq|raj}}
 * Romanian: {{t+|ro|balon|n}}, {{t-|ro|bășică|f}}, {{t-|ro|bulă|f}}
+* {{trreq|rm}}
 * Russian: {{t+|ru|пузырь|m|tr=puzýr'}}
+* {{trreq|sc}}
+* {{trreq|sco}}
+* {{trreq|gd}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|мјехурић|m|alt=мјеху̀рић|sc=Cyrl}} ([[Ijekavian]]), {{t-|sh|мехурић|m|alt=меху̀рић|sc=Cyrl}} ([[Ekavian]])
 *: Roman: {{t-|sh|mjehurić|m|alt=mjehùrić}} ([[Ijekavian]]), {{t-|sh|mehurić|m|alt=mehùrić}} ([[Ekavian]])
@@ -153,6 +158,10 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|vo}}
 * {{trreq|wa}}
 * Welsh: {{t-|cy|bwrlwm|m}}, {{t-|cy|yswigen|f}}
+* {{trreq|wo}}
+* {{trreq|xh}}
+* {{trreq|yi}}
+* {{trreq|yo}}
 * {{trreq|zu}}
 {{trans-bottom}}
 
