t+mwl:[[lhano]] ([[WT:EDIT|Assisted]]) <simple#18657512>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -166,7 +166,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * {{trreq|ml}}
 * {{trreq|gv}}
 * {{trreq|mr}}
-* {{trreq|mwl}}
+* Mirandese: {{tø|mwl|lhano}}
 * {{trreq|ne}}
 * Novial: {{t|nov|simpli}}
 * {{trreq|oc}}
