--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -43,11 +43,11 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-top|at that time}}
 * Albanian: {{t+|sq|atëherë}}
 * Arabic: {{t-|ar|ثم|tr=ṯúmma|sc=Arab}}
-* Aromanian: {{t-|rup|atumtsea]], {{t|rup|atuntsi}}
+* Aromanian: {{t-|rup|atumtsea}}, {{t|rup|atuntsi}}
 * Belarusian: {{t-|be|тады|tr=tadý|sc=Cyrl}}
 * Bengali: {{t+|bn|তখন|tr=tôkhôn|sc=Beng}}
 * Bulgarian: {{t+|bg|тогава|tr=togáva|sc=Cyrl}}
-* Catalan: [[llavors]]
+* Catalan: {{t|ca|llavors}}
 * Chinese:
 *: Mandarin: {{t|cmn|當時|sc=Hani}}, {{t|cmn|当时|tr=dāngshí|sc=Hani}}, {{t|cmn|那時|sc=Hani}}, {{t|cmn|那时|tr=nà shí|sc=Hani}}
 * Czech: {{t+|cs|tehdy}}
@@ -85,7 +85,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Portuguese: {{t+|pt|então}}, [[naquele]] {{t+|pt|tempo}}, [[naquela]] {{t+|pt|época}}, [[nesse tempo]], [[nessa]] {{t+|pt|época}}
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|тогда|tr=togdá}}
-* Scots: than
+* Scots: {{t|sco|than}}
 * Scottish Gaelic: {{t-|gd|matà}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|онда}}, {{t-|sh|тада}}
@@ -94,7 +94,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Slovene: {{t-|sl|nato}}
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|då}}
-* Telugu: [[అప్పుడు]] (appuDu)
+* Telugu: {{t|te|అప్పుడు|tr=appuDu}}
 * Thai: {{t-|th|ในตอนนั้น|tr=nai dton-nán|sc=Thai}}
 * Turkish: {{t+|tr|sonra}}
 * Ukrainian: {{t-|uk|тоді|tr=todí|sc=Cyrl}}
@@ -104,14 +104,14 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-bottom}}
 
 {{trans-top|soon afterward}}
-* Albanian: [[pastaj]]
+* Albanian: {{t|sq|pastaj}}
 * Arabic: {{t-|ar|ثم|tr=ṯúmma|sc=Arab}}
 * Armenian: {{t-|hy|հետո|tr=heto|sc=Armn}}
 * Belarusian: {{t-|be|затым|tr=zatým|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|接著|sc=Hani}}, {{t|cmn|接着|tr=jiēzhe|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
-* Dutch: [[toen]] ''(past tense)'', [[dan]] ''(present and future tenses)''
+* Dutch: {{t|nl|toen}} ''(past tense)'', {{t|nl|dan}} ''(present and future tenses)''
 * Esperanto: {{t-|eo|tiam}}
 * Finnish: {{t+|fi|sitten}}
 * French: {{t+|fr|puis}}
@@ -155,7 +155,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-bottom}}
 
 {{trans-top|next in order}}
-* Albanian: [[pastaj]]
+* Albanian: {{t|sq|pastaj}}
 * Arabic: {{t-|ar|ثم|tr=ṯúmma|sc=Arab}}
 * Armenian: {{t-|hy|հետո|tr=heto|sc=Armn}}
 * Bengali: {{t-|bn|এরপর|tr=erpôr|sc=Beng}}, {{t-|bn|তারপর|tr=tarpôr|sc=Beng}}
@@ -179,7 +179,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Old English: {{t-|ang|þa|alt=þā}}
 * Pashto: {{t-|ps|بيا|tr=byâ}}
 * Polish: (a) [[następnie]], (a) [[potem]]
-* Portuguese: [[então]], {{t+|pt|depois}}, {{t-|pt|seguidamente}}, {{t-|pt|sequencialmente}}
+* Portuguese: {{t|pt|então}}, {{t+|pt|depois}}, {{t-|pt|seguidamente}}, {{t-|pt|sequencialmente}}
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|затем|tr=zatém}}, {{t+|ru|потом|tr=potóm}}
 * Slovene: {{t+|sl|potem}}
