t+te:[[బుడ్డ]] ([[WT:EDIT|Assisted]]) <bubble#18659901>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -147,7 +147,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Swedish: {{t+|sv|bubbla|c}}, {{t+|sv|såpbubblor}} {{qualifier|soap bubble}}
 * Tagalog: {{t-|tl|bula}}
 * Tamil: {{t|ta|குமிழி|tr=kumiẓi|sc=Taml}}
-* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
+* Telugu: {{t+|te|బుడగ|tr=buḍaga}}, {{t|te|బుడ్డ|tr=buḍḍa|sc=Telu}}
 * {{trreq|th}}
 * Turkish: {{t+|tr|köpük}}
 * {{trreq|tk}}
