--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -51,7 +51,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|an}}
 * Armenian: {{t-|hy|պղպջակ|tr=pġpǰak}}
 * {{trreq|as}}
-* {{trreq|ast}}
+* Asturian: {{t|ast|burbuya|f}}
 * {{trreq|ay}}
 * Azeri: {{t+|az|köpük}}
 * {{trreq|ba}}
