--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -90,7 +90,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hindi: {{t|hi|बुल्ला|m|tr=bullā|sc=Deva}}
 * Hungarian: {{t+|hu|buborék}}
 * {{trreq|is}}
-* {{trreq|io}}
+* Ido: {{t|io|bulo}}
 * {{trreq|ig}}
 * {{trreq|id}}
 * {{trreq|ia}}
@@ -106,8 +106,8 @@ Partly imitative, also influenced by {{term|burble}}.
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
-* {{trreq|ky}}
 {{trans-mid}}
+* {{trreq|ky}}
 * {{trreq|lo}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t+|lv|burbulis|m}}
