--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -16,6 +16,10 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 # A bending of the knee; a [[genuflection]].
 # A [[bent]] or curved part; a curving piece or portion (of anything).
 #: ''the '''crook''' of a cane''
+#*{{quote-book|year=1907|author=[[w:Robert W. Chambers|Robert Chambers]]
+|title=The Younger Set
+|chapter=1/2|url=http://openlibrary.org/works/OL8127246W
+|passage=It was flood-tide along Fifth Avenue ; motor, brougham, and victoria swept by on the glittering current&nbsp;;&nbsp;[&hellip;]&nbsp;; young men&nbsp;[&hellip;], silk-hatted, frock-coated, the '''crooks''' of their walking sticks tucked up under their left arms, passed on the Park side.}}
 # {{obsolete}} A [[lock]] or [[curl]] of hair.
 # {{obsolete}} A [[gibbet]].
 # {{obsolete}} A support beam consisting of a post with a cross-beam resting upon it; a bracket or truss consisting of a vertical piece, a horizontal piece, and a strut.
