--- a/en/t/Touretter.741408.wikitext
+++ b/en/t/Touretter.741408.wikitext
@@ -4,3 +4,8 @@
 {{en-noun}}
 
 # A person who has [[Tourette syndrome]].
+
+====Translations====
+{{trans-top|person who has Tourette syndrome}}
+{{trans-mid}}
+{{trans-bottom}}
