--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -10,7 +10,7 @@ From {{etyl|dum|nl}} {{term|wasschen|lang=dum}}, from {{etyl|odt|nl}} {{term|was
 ====Verb====
 {{nl-verb|mix}}
 
-# {{transitive|lang=nl}} To [[wash]] or [[clean]] (something or oneself).
+# {{transitive|lang=nl}} To [[wash]] or [[clean]] (something or oneself)
 
 =====Conjugation=====
 {{nl-conj-mix|was|waste|gewassen|wasse|waste|waste|aux2=zijn}}
