--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -79,6 +79,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Armenian: {{t-|hy|կղզի|tr=kġzi}}
 * Assamese: {{t-|as|দ্বীপ|tr=dwip|sc=Beng}}
 * Asturian: {{t+|ast|islla|f}}
+* {{trreq|ay}}
 * Azeri: {{t+|az|ada}}
 * Baekje: {{tø|pkc|斯麻|tr=sama}}
 * Bashkir: {{tø|ba|утрау|tr=utraw|sc=Cyrl}}
@@ -90,6 +91,8 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Burmese: {{t+|my|ကျွန်း|tr=kyun:|sc=Mymr}}
 * Catalan: {{t+|ca|illa|f}}
 * Chamicuro: {{tø|ccc|yishla}}
+* {{trreq|chr}}
+* {{trreq|ny}}
 * Chinese:
 *: Mandarin: {{t|cmn|島|sc=Hani}}, {{t|cmn|岛|tr=dǎo|sc=Hani}}, {{t|cmn|島嶼|sc=Hani}}, {{t|cmn|岛屿|tr=dǎoyǔ|sc=Hani}}
 *: Min Nan: {{t-|nan|島嶼|tó-sū|sc=Hans}}, {{t-|nan|島|tr=tó, tóo|sc=Hans}}
@@ -108,6 +111,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Egyptian: {{tø|egy|𓈀𓈇𓏤|m|tr=iw}}, {{tø|egy|𓅁𓇋𓇋𓈅𓏤|f|tr=mai}}
 * Esperanto: {{t+|eo|insulo}}
 * Estonian: {{t+|et|saar}}
+* {{trreq|ee}}
 * {{trreq|ext}}
 * Faroese: {{t-|fo|oyggj|f}}, (small island, or river-island) {{t-|fo|hólmur|m}}
 * Fijian: {{t-|fj|yanuyanu}}
@@ -121,9 +125,9 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Greek: {{qualifier|formal}} {{t+|el|νήσος|f|tr=nísos|sc=Grek}}, {{t+|el|νησί|n|tr=nisí|sc=Grek}}
 *: Ancient: {{tø|grc|νῆσος|f|tr=nē̂sos|sc=polytonic}}
 * Gujarati: {{t-|gu|દ્વીપ|tr=dvīp|sc=Gujr}}
+* Haitian Creole: {{tø|ht|zile}}, {{tø|ht|zil}}
 * {{trreq|ha}}
 * {{trreq|haw}}
-* Haitian Creole: {{tø|ht|zile}}, {{tø|ht|zil}}
 * Hebrew: {{t+|he|אי|m|alt=אִי|tr=i}}
 * Hindi: {{t-|hi|द्वीप|m|tr=dvīp|sc=Deva}}, {{t-|hi|टापू|m|tr=ṭāpū|sc=Deva}}
 * Hungarian: {{t+|hu|sziget}}
@@ -160,12 +164,14 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Lithuanian: {{t+|lt|sala|f}}
 * Low German: {{t-|nds|Insel|f}}, {{t-|nds|Ailand|n}}
 * Lower Sorbian: {{tø|dsb|kupa|f}}, {{tø|dsb|kupka|f}}
+* {{trreq|lg}}
 * Luxembourgish: {{t-|lb|Insel}}
 * Macedonian: {{t-|mk|остров|m|tr=óstrov}}
 * Malagasy: {{t+|mg|nosy}}
 * Malay: {{t-|ms|pulau}}, {{t-|ms|nusa}}
 * Malayalam: {{t+|ml|ദ്വീപ്|tr=dvīp}}
 * Maltese: {{t+|mt|gżira|f}}
+* {{trreq|gv}}
 * Maori: {{t-|mi|motu}}
 * Marathi: {{t-|mr|बेट|tr=veṭ|sc=Deva}}
 * Mirandese: {{t|mwl|ilha|f}}
@@ -176,12 +182,14 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Norman: {{tø|roa-nor|île}}
 * Norwegian: {{t+|no|øy|m|f}}
 * Nottoway-Meherrin: {{tø|nwy|eohtessieh}}
+* {{trreq|nov}}
 * Occitan: {{t+|oc|illa|f}}
 * Okinawan: {{tø|ryu|しま|tr=sima}}
 * Old English: {{t-|ang|ieg|f|alt=īeġ}}
 * {{trreq|or}}
 * Ossetian: {{tø|os|сакъадах|tr=saqadax}}
 * Ottoman Turkish: {{tø|ota|جزیره|tr=cezîre|sc=ota-Arab}}, {{tø|ota|آدا|tr=ada|sc=ota-Arab}}, {{tø|ota|جزائر|p|tr=cezâir|sc=ota-Arab}}
+* {{trreq|ps}}
 * Persian: {{t+|fa|جزیره|tr=jazire|sc=fa-Arab}}
 * Phoenician: {{tø|phn|𐤀𐤉|tr=ʔy|sc=Phnx}}
 * Polish: {{t+|pl|wyspa|f}}
@@ -195,11 +203,13 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Russian: {{t+|ru|остров|m|tr=óstrov}}
 * Sanskrit: {{t-|sa|जलवेष्टितभूमिः}}
 * Sardinian: {{t-|sc|isula|f}}
+* {{trreq|sco}}
 * Scottish Gaelic: {{t-|gd|eilean|m}},  {{t-|gd|innis|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|острво|n|sc=Cyrl}}, {{t-|sh|оток|m}}
 *: Roman: {{t+|sh|ostrvo|n}}, {{t+|sh|otok|m}}
 * Sicilian: {{t+|scn|ìsula|f}}
+* {{trreq|sd}}
 * Sinhalese: {{t-|si|දිවයින|tr=divayina|sc=Sinh}}
 * Slovak: {{t-|sk|ostrov|m}}
 * Slovene: {{t+|sl|otok|m}}
@@ -224,6 +234,8 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Ukrainian: {{t+|uk|острів|m|tr=óstriv}}
 * Upper Sorbian: {{t-|hsb|kupa|f}}
 * Urdu: {{t+|ur|ٹاپو|m|tr=ṭāpū|sc=ur-Arab}}
+* {{trreq|ug}}
+* {{trreq|uz}}
 * Vietnamese: {{t+|vi|đảo}} ({{t-|vi|島}})
 * Volapük: {{t+|vo|nisul}}
 * {{trreq|wa}}
