/* See also */ <division#18665158>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -230,10 +230,13 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 {{trans-bottom}}
 
 ===See also===
+* [[addition]], [[summation]]: ([[augend]]) + ([[addend]]) = ([[summand]]) × ([[summand]]) = ([[sum]], [[total]])
+* [[subtraction]]: ([[minuend]]) − ([[subtrahend]]) = ([[difference]])
+* [[multiplication]]: ([[multiplier]]) × ([[multiplicand]]) = ([[factor]]) × ([[factor]]) = ([[product]])
+* [[division]]: ([[dividend]]) ÷ ([[divisor]]) = ([[quotient]]), [[remainder]] left over if divisor does not divide dividend
 * [[denominator]]
 * [[fraction]]
 * [[numerator]]
-* [[quotient]]
 
 [[Category:1000 English basic words]]
 
