--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -94,6 +94,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * Swahili: {{t+|sw|pinda}},  {{t+|sw|kunja}}
 * Swedish: {{t+|sv|kuva}}
 * Turkish: {{t+|tr|bükmek}}
+* Walloon: {{t|wa|fé ployî}} {{qualifier|(to force)}}, {{t|wa|ployî}} {{qualifier|(to be forced)}}
 {{trans-bottom}}
 
 {{trans-top|to tie a line}}
@@ -135,6 +136,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * Swahili: {{t+|sw|pinda}}
 * Swedish: {{t+|sv|böja}}, {{t+|sv|krokna}}
 * Turkish: {{t+|tr|bükmek}}
+* Walloon: {{t|wa|ployî}}, {{t|wa|verdjî}}
 {{trans-bottom}}
 
 {{trans-top|to change direction}}
