--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -10,7 +10,9 @@
 # Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the ''[[Machairodontinae]]'' subfamily of the ''[[Felidae]]''.
 
 ====Synonyms====
+* [[sabrecat]] / [[sabercat]]
 * [[sabre-tooth]]
+* [[sabre-toothed cat]]
 
 ====Translations====
 {{trans-top|prehistoric cat}}
