--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -5,13 +5,13 @@
 * [[saber-toothed tiger]]
 
 ===Noun===
-{{en-noun|sg=[[sabre]]-[[toothed]] [[tiger]]}}
+{{en-noun|head=[[sabre-toothed]] [[tiger]]}}
 
 # Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the ''[[Machairodontinae]]'' subfamily of the ''[[Felidae]]''.
 
 ====Synonyms====
 * [[sabrecat]] / [[sabercat]]
-* [[sabre-tooth]]
+* [[sabre-tooth]] / [[sabretooth]]
 * [[sabre-toothed cat]]
 
 ====Translations====
