--- a/en/s/sabre-toothed.801836.wikitext
+++ b/en/s/sabre-toothed.801836.wikitext
@@ -3,13 +3,13 @@
 ===Adjective===
 {{en-adj|-}}
 
-# Of or pertaining to prehistoric creatures with savage [[teeth]].
+# Having [[massive]] [[curved]] [[upper]] [[canine teeth]]
 
 ====Derived terms====
-* [[sabre-toothed tiger]]
+* [[sarbe-toothed cat]] / [[sabre-toothed tiger]]
 
 ====Translations====
-{{trans-top|having savage teeth}}
+{{trans-top}}
 * Finnish: {{t-|fi|sapelihampainen}}
 {{trans-mid}}
 {{trans-bottom}}
