t+fr:[[décompte]] t+fr:[[hit-parade]] t+fr:[[top 50]] t-balance ([[WT:EDIT|Assisted]]) <countdown#18668184>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -24,9 +24,9 @@
 * Czech: {{t-|cs|odpočítávání|n}}
 * Dutch: [[aftelling]] {{f}}, [[aftellen]] {{n}}
 * Finnish: {{t+|fi|lähtölaskenta}}
-* French: {{t+|fr|compte à rebours|m}}
-{{trans-mid}}
+* French: {{t+|fr|compte à rebours|m}}, {{t|fr|décompte|m}}
 * German: {{t+|de|Countdown|m}}
+{{trans-mid}}
 * Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
 * Italian: {{t-|it|conto alla rovescia|m}}
 * Macedonian: {{t-|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
@@ -46,8 +46,9 @@
 {{trans-bottom}}
 
 {{trans-top|A radio or television program counting down the top songs of a given week}}
-* German: {{t+|de|Countdown|m}}
+* French: {{t|fr|hit-parade|m}}, {{t|fr|top 50|m}}
 {{trans-mid}}
+* German: {{t+|de|Countdown|m}}
 {{trans-bottom}}
 
 ===Verb===
