--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -13,7 +13,7 @@ From {{term|public|lang=en}} (in the English sense, "open to all members of a co
 #* '''1937''', [[w:George Orwell|George Orwell]], ''[[w:The Road to Wigan Pier|The Road to Wigan Pier]]'', 1997, Peter Hobley Davison (editor), Secker & Warburg, [http://books.google.com.au/books?id=TUkqAQAAIAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=NQXwT9rbMa2eiAeLiK2zDQ&redir_esc=y page 146],
 #*: Who is there who has not jeered at the House of Lords, the military caste, the Royal Family, the '''public schools''', the huntin′ and shootin′ people, the old ladies in Cheltenham boarding houses, the horrors of ‘county’ society and the social hierarchy generally?
 #* '''1958''', Michael Dunlop Young, ''The Rise of the Meritocracy'', [http://books.google.com.au/books?id=e_rTyIMJR9kC&pg=PA55&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=s-vvT4aqOMbdigfpruT1DA&redir_esc=y#v=onepage&q=%22public%20school%22|%22public%20schools%22%20-intitle%3A%22public%22%20-inauthor%3A%22%22&f=false page 55],
-#*: Year by year, but especially in 1958, Labour Party statements said that ‘Labour must no longer hesitate to tackle the greatest source of social inequality and class division in our society – the private schools.’ But they did hesitate, even though the leaders of Labour were guilty '''public-school''' men themselves.
+#*: Year by year, but especially in 1958, Labour Party statements said that ‘Labour must no longer hesitate to tackle the greatest source of social inequality and class division in our society – the private schools.’ But they did hesitate, even though the leaders of Labour were guilty '''public-school''' men themselves.  The majority of Labour party members attended the state funded Grammar schools in this period.  They won a scholarship.
 #* '''1978''', Donald Gould, ''A Groundling′s Notebook: Empire Line'', ''[[w:New Scientist|New Scientist]]'', Volume 80, [http://books.google.com.au/books?id=Oq0bAQAAMAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=s-vvT4aqOMbdigfpruT1DA&redir_esc=y page 121],
 #*: When I was a boy '''public schools''' were the only means of entry into the corridors of power.
 #* '''1979''', James MacGregor Burns, ''Leadership'', [http://books.google.com.au/books?id=ptUJAQAAMAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=NQXwT9rbMa2eiAeLiK2zDQ&redir_esc=y page 97],
