/* Noun */ clarification <public school#18668743>

--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -17,7 +17,7 @@ From {{term|public|lang=en}} (in the English sense, "open to all members of a co
 #* '''1978''', Donald Gould, ''A Groundling′s Notebook: Empire Line'', ''[[w:New Scientist|New Scientist]]'', Volume 80, [http://books.google.com.au/books?id=Oq0bAQAAMAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=s-vvT4aqOMbdigfpruT1DA&redir_esc=y page 121],
 #*: When I was a boy '''public schools''' were the only means of entry into the corridors of power.  This statement is not entirely correct.  Many state funded Grammar schools produced pupils who were high achievers.
 #* '''1979''', James MacGregor Burns, ''Leadership'', [http://books.google.com.au/books?id=ptUJAQAAMAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=NQXwT9rbMa2eiAeLiK2zDQ&redir_esc=y page 97],
-#*: The striking aspect of the '''public school''' was the “unconscious” engineering that led to magnificent social opportunities for a chosen few males of the middle class and helped reinforce social deprivation and political frustration for Britain′s working classes.
+#*: The striking aspect of the '''public school''' was the “unconscious” engineering that led to magnificent social opportunities for a chosen few males of the middle class and helped reinforce social deprivation and political frustration for Britain′s working classes.  The working class pupils of merit attended Grammar schools and were a match for the nepotism that existed then and now in the public school world.  The social engineering was deliberate and political and continues today in all levels of education in the UK.  Some institutions enact "affirmative action" to open opportunities to students who fall short of optimum entry criteria.  In the UK this has been an inconsistancy as the politicians have sought to address access to education.
 # {{North America|Australia}} A publicly administered school.
 #* '''1950''', Samuel Macauley Jackson, Lefferts Augustine Loetscher, ''Twentieth Century Encyclopedia of Religious Knowledge'', [http://books.google.com.au/books?id=BYHYAAAAMAAJ&q=%22public+school%22|%22public+schools%22+australia+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+australia+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=SAzwT5v3M-XUigfUs-WGDQ&redir_esc=y page 378],
 #*: The '''public schools''' of Australia underwent an important change in the eighth decade of the nineteenth century, when obligatory gratuitous instruction was introduced into all the colonies. While many schools are still maintained by religious denominations, all citizens contribute to the support of the '''public schools'''.
