--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -7,7 +7,7 @@
 # [[with]] [[out]]; [[without]]
 # {{context|finance|insurance}} [[write]] [[off]]; [[write-off]]
 # Wife of (E.g. Sandy Steven, W/o Steven)
-# {{tennis}} [[walkover]]
+# {{tennis}} [[walkover]] wife of
 
 ====Related terms====
 * [[w/]]
