--- a/en/m/machairodont.801835.wikitext
+++ b/en/m/machairodont.801835.wikitext
@@ -1,8 +1,9 @@
 ==English==
 
 ===Noun===
-{{head|en|noun}}
-# A [[sabre-toothed]] [[animal]].
+{{en-noun}}
+
+# Any [[sabre-toothed]] [[animal]] of the subfamily [[Machairodontinae]]
 
 ===Anagrams===
 * [[hadronic atom#English|hadronic atom]]
