/* Noun */ meaning added <bleed#18671890>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -136,6 +136,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 {{en-noun}}
 
 # An incident of bleeding, as in [[haemophilia]].
+# In [[printing]] (1): a narrow edge around a page layout, to be printed but cut off afterwards (added to allow for slight misalignment, especially with pictures that should run to the edge of the finished sheet).
 
 ===References===
 * {{R:Century 1911}}
