--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -19,6 +19,7 @@
 * French: {{t+|fr|sans blague}}
 * German: {{qualifier|colloquial}} {{t-|de|ohne Scheiß}}, {{t-|de|im Ernst}}
 * Russian: {{t+|ru|неужели|tr=neužéli?|alt=неужели?|sc=Cyrl}}
+* Spanish: {{t|es|no me digas}}
 {{trans-bottom}}
 
 [[fr:no kidding]]
