--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -24,7 +24,7 @@
 ==Dutch==
 
 ===Noun===
-{{nl-noun}}
+{{nl-noun|n|-|-}}
 
 # A South-[[Caucasian]] [[w:Laz people|people]] of the [[w:Trabzon|Trabzon]] area of [[Turkey]].
 # {{slang}} A [[Turk]] from any location near the [[Black Sea]].
