--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -4,7 +4,7 @@
 {{prefix|a|boil|gloss1=in, on}}
 
 ===Pronunciation===
-{{a|US}} {{IPA|/ə.ˈbɔɪl/|/ə.ˈbɔɪl̩/}}
+{{a|US}} {{IPA|/əˈbɔɪl/|/əˈbɔɪl̩/}}
 
 ===Adjective===
 {{en-adj}}
