t+chr:[[ᎦᏙ ᎠᎹ ᎦᏕᏯᏍᏛ]] ([[WT:EDIT|Assisted]]) <island#18693370>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -91,7 +91,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Burmese: {{t+|my|ကျွန်း|tr=kyun:|sc=Mymr}}
 * Catalan: {{t+|ca|illa|f}}
 * Chamicuro: {{tø|ccc|yishla}}
-* {{trreq|chr}}
+* Cherokee: {{t|chr|ᎦᏙ ᎠᎹ ᎦᏕᏯᏍᏛ|tr=gado ama gadeyasdv|sc=Cher}}
 * {{trreq|ny}}
 * Chinese:
 *: Mandarin: {{t|cmn|島|sc=Hani}}, {{t|cmn|岛|tr=dǎo|sc=Hani}}, {{t|cmn|島嶼|sc=Hani}}, {{t|cmn|岛屿|tr=dǎoyǔ|sc=Hani}}
