Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <mouflon#18709215>

--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -1,5 +1,4 @@
 ==English==
-
 {{wikipedia}}
 
 ===Etymology===
@@ -14,59 +13,57 @@
 # A [[species]] of wild [[sheep]] inhabiting [[Sardinia]] and [[Corsica]]. Scientific name: ''Ovis musimon''.
 
 ====Translations====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|sheep}}
 * Albanian: {{t-|sq|mufloni}}
-* Basque: [[mufloi]]
+* Basque: {{t|eu|mufloi}}
 * Belarusian: {{t-|be|муфлон|sc=Cyrl}}
-* Breton: [[mouflon]]
+* Breton: {{t|br|mouflon}}
 * Bulgarian: {{t-|bg|муфлон|sc=Cyrl|tr=muflon}}
-* Catalan: [[mufló]]
-* Serbo-Croatian: {{t-|sh|muflon}}
+* Catalan: {{t|ca|mufló}}
 * Czech: {{t+|cs|muflon}}
 * Danish: {{t-|da|muflon}}
 * Dutch: {{t+|nl|moeflon|m}}
-* Esperanto: [[muflono]]
+* Esperanto: {{t|eo|muflono}}
 * Estonian: {{t-|et|muflon}}
 * Finnish: {{t-|fi|mufloni}}
 * French: {{t+|fr|mouflon|m}}
-* Friulian: [[muflon]]
-* Galician: [[muflón]]
-* German: [[Mufflon]] {{m}}
+* Friulian: {{t|fur|muflon}}
+* Galician: {{t|gl|muflón}}
+* German: {{t|de|Mufflon|m}}
 * Greek: {{t+|el|μουφλόν|sc=Grek|tr=mouflón}}
 * Hungarian: {{t+|hu|muflon}}
 * Irish: {{t-|ga|caora mouflon|f}}
 * Italian: {{t+|it|muflone|m}}
 * Japanese: {{t-|ja|ムフロン|sc=Jpan|tr=mufuron}}
-* Ladin: [[muflon]]
-* Latvian: [[muflons]]
+* Ladin: {{t|lld|muflon}}
+* Latvian: {{t|lv|muflons}}
 * Lithuanian: {{t+|lt|muflonas}}
 {{trans-mid}}
-* Lower Sorbian: [[muflon]]
+* Lower Sorbian: {{t|dsb|muflon}}
 * Macedonian: {{t-|mk|муфлон|sc=Cyrl}}
-* Maltese: [[muflun]]
+* Maltese: {{t|mt|muflun}}
 * Navajo: {{tø|nv|tó wónaanídę́ę́ʼ dibé ałchiní}}
 * Norwegian: {{t-|no|mufflon}}
-* Occitan: [[moflon]]
-* Polish: [[muflon]]
-* Portuguese: [[muflăo]]
+* Occitan: {{t|oc|moflon}}
+* Polish: {{t|pl|muflon}}
+* Portuguese: {{t|pt|muflăo}}
 * Romanian: {{t+|ro|muflon}}
-* Romansch: [[muflon]]
+* Romansch: {{t|rm|muflon}}
 * Russian: {{t+|ru|муфлон|sc=Cyrl}}
 * Sami: [[muflon]], [[meahccesávza]]
 * Sardinian: {{t-|sc|mruvoni}}, {{t-|sc|mugra}}, {{t-|sc|muva}}, {{t-|sc|murgone}}
 * Serbo-Croatian:
 *: Cyrillic spelling: {{t-|sh|муфлон|sc=Cyrl}}
 *: Roman spelling: {{t-|sh|muflon}}
-* Slovak: [[muflón]]
+* Slovak: {{t|sk|muflón}}
 * Slovene: {{t+|sl|muflon}}
-* Spanish: [[muflón]] {{m}}
+* Spanish: {{t|es|muflón|m}}
 * Swedish: {{t-|sv|mufflon}}
 * Turkish: {{t+|tr|yaban koyunu}}, {{t+|tr|muflon}}
 * Ukrainian: {{t-|uk|муфлон|sc=Cyrl|tr=muflon}}
-* Upper Sorbian: [[muflon]]
-* Welsh: [[mwfflon]]
-* West Frisian: [[moeflon]]
+* Upper Sorbian: {{t|hsb|muflon}}
+* Welsh: {{t|cy|mwfflon}}
+* West Frisian: {{t|fy|moeflon}}
 {{trans-bottom}}
 
 [[Category:en:Sheep]]
